Sun May 10 16:23:58 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_binding): fix segmentation fault on marking phase.
	  envptr of newenvval should not be NULL.

	  You can reproduce by
	   make test-all TESTS='--gc-stress -n test_to_proc_binding ruby/test_method.rb'

Sun May 10 12:41:18 2015  Masaki Matsushita <glass.saga@gmail.com>

	* ext/zlib/zlib.c (rb_gzreader_external_encoding):
	  define GzipReader#external_encoding.
	  [Bug #10900]

	* test/zlib/test_zlib.rb: test for above.

Sun May 10 11:57:48 2015  Masaki Matsushita <glass.saga@gmail.com>

	* ext/win32ole/win32ole_variant.c: fix typo "indicies".
	  the patch is from davydovanton <antondavydov.o at gmail.com>.
	  [fix GH-892]

	* lib/rubygems/indexer.rb: ditto.

	* test/rubygems/test_gem_indexer.rb: ditto.

Sun May 10 11:44:37 2015  Masaki Matsushita <glass.saga@gmail.com>

	* string.c (rb_str_crypt): Raise ArgumentError when
	  string passed to String#crypt contains null.
	  the patch is from jrusnack <jrusnack at redhat.com>.
	  [Bug #10988] [fix GH-853]

	* test/ruby/test_string.rb: test for above.

Sun May 10 11:23:03 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): Use size to set array capa when possible.
	  the patch is from HonoreDB <aweiner at mdsol.com>.
	  [fix GH-444]

Sat May  9 06:48:36 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): GC guard
	  [Bug #11123]

Fri May  8 22:57:24 2015  takiy33  <takiy33@gmail.com>

	* test/matrix/test_matrix.rb (test_determinant): refactor test on
	  Matrix#determinant, by merging with test_det for an alias method
	  det.  [Fix GH-897]

Fri May  8 15:43:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (body_ext_mpart): should work even if body-fld-dsp
	  is omitted.  [ruby-core:69093] [Bug #11128]

Fri May  8 15:05:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/syntax/control_expressions.rdoc: fix a missing "a"
	  [fix GH-888][ci skip] Patch by @riffraff
